public/css/native.css
/* ... */
#landingPage .testimonies-slider .slick-arrow {
    position: absolute;
    bottom: 0;
    color: var(--almost-white);
}
#landingPage .client__item {
    padding: 0 20px;
    margin-top: 30px;
}
#landingPage .client__img {
    max-width: 100%;
    display: block;
    margin: 0 auto;
}
#landingPage #client .row {
    margin-top: -30px;
}
#landingPage #client .slick-arrow {
    position: absolute;
    color: var(--secondary-color);
    top: -60px;
    transform: translateY(100%);
}
#landingPage #client .bxs-chevron-left {
    left: 0;
}
#landingPage #client .bxs-chevron-right {
    right: 0;
}
#landingPage #interest {
    width: 100%;
}
#landingPage #interest .interest-slider__item {
    position: relative;
    transition: all 150ms;
}
#landingPage #interest .interest-slider__overlay {
    background-color: rgba(0, 0, 0, 0.2);
    opacity: 0;
    visibility: hidden;
    transition: all 200ms;
    z-index: 1;
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    cursor: pointer;
    bottom: 0;
    width: 100%;
    height: 100%;
}
#landingPage #interest .interest-slider__item:hover .interest-slider__overlay {
    opacity: 1;
    visibility: visible;
}
#landingPage #interest .interest-slider__item img {
    width: 100%;
    object-fit: cover;
    object-position: center;
}
#landingPage #interest .interest-slider__title {
    position: absolute;
    top: 50%;
    width: 100%;
    text-align: center;
    transform: translateY(-50%);
    text-shadow: 0 4px 4px rgba(0, 0, 0, 0.7);
    font-weight: bold;
    left: 0;
    color: #fff;
    font-size: 1.5rem;
}
#landingPage #interest .interest-slider__link {
    position: absolute;
    top: 0;
    left: 0;
    opacity: 0;
    width: 100%;
    height: 100%;
    z-index: 2;
}

#servicesPage header {
    background-color: var(--almost-white);
    border-bottom: 1px solid #dbdbdb;
}
#servicesPage .service-header__img {
    max-width: 100%;
    height: 300px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}
#servicesPage .service-header__caption {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding-right: 0;
}
#servicesPage .service-header__heading {
    font-size: 2.5rem;
    text-align: center;
    color: #5e5e5e;
}
#servicesPage .category {
    margin-bottom: 40px;
    padding-top: 30px;
}
#servicesPage .category .slick-track {
    margin-left: 0;
    margin-right: 0;
}
#servicesPage .slick-track {
    display: flex;
}
#servicesPage .slick-track .slick-slide {
    height: auto;
    display: inline-flex;
}
#servicesPage .service {
    transition: all 150ms;
    height: 100%;
    position: relative;
    margin-bottom: 15px;
}
#servicesPage .service:hover {
    box-shadow: none;
}
#servicesPage .service .card__header {
    display: flex;
    padding-top: 0;
    flex-direction: column-reverse;
}
#servicesPage .service__title {
    font-size: 23px;
    margin-top: 15px;
}
#servicesPage .service__agent-name {
    color: #4d4d4d;
    font-weight: normal;
}
#servicesPage .service:hover .service__title {
    color: var(--third-color);
}
#servicesPage .service__img-item {
    height: 200px;
    object-fit: cover;
}
#servicesPage .service__content {
    word-break: break-word;
}
#servicesPage .service__content h1 {
    font-size: 1rem;
    font-weight: normal;
}
#servicesPage .service__action {
    display: flex;
    margin-top: auto;
    justify-content: space-between;
    padding: 0 20px 20px;
    align-items: center;
    color: var(--primary-color);
}
#servicesPage .service__rating {
    color: var(--almost-black);
}
#servicesPage .service__goto {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;
    left: 0;
}
#servicesPage .service__goto span {
    visibility: hidden;
}
#servicesPage [id^='service-slider'] .slick-next {
    right: -20px;
}
#servicesPage [id^='service-slider'] .slick-prev {
    left: -30px;
}
#servicesPage [id^='service-slider'] .slick-arrow::before {
    content: none;
}
#servicesPage [id^='service-slider'] .slick-arrow {
    color: var(--secondary-color);
    font-weight: bold;
}

#singleServicePage .service-single__top {
    margin-bottom: 50px;
}
#singleServicePage .service-single__img {
    max-width: 100%;
    max-height: 400px;
    object-fit: cover;
}
#singleServicePage .service-single__title {
    font-size: 24px;
}
#singleServicePage .service-single__subheading {
    color: var(--text-gray-dark);
    font-weight: bold;
    margin-bottom: 35px;
}
#singleServicePage .service-single__rating {
    border-left: 1px solid #a5a5a5;
    padding-left: 10px;
    margin-left: 10px;
}
#singleServicePage .service-single__rating {
    color: var(--secondary-color);
}
#singleServicePage .service-single__description {
    color: var(--text-gray-dark);
    line-height: 1.8rem;
}
#singleServicePage .service-single__description div h1 {
    font-size: 1.15rem;
}
#singleServicePage .service-single__description div {
    font-size: 1rem;
}
#singleServicePage .service-single__description div h1, #singleServicePage .service-single__description div h2,
#singleServicePage .service-single__description div h3, #singleServicePage .service-single__description div h4,
#singleServicePage .service-single__description div h5, #singleServicePage .service-single__description div h6{
    margin-bottom: 20px;
}
#singleServicePage .service-single__description p {
    margin-bottom: 20px;
}
#singleServicePage .service-single__description ul li::before {
    content: "";
    background-color: var(--third-color);
    display: block;
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: 0;
    width: 7px;
    height: 7px;
    border-radius: 50%;
}
#singleServicePage .service-single__description ul li {
    position: relative;
    padding-left: 1.5rem;
    line-height: 1.7rem;
    margin-bottom: 8px;
}
#singleServicePage .service-single__agent {
    margin-top: 80px;
}
/* ... */

